Add menu animation and validate html

--- a/src/blocks/to-top/to-top.html
+++ b/src/blocks/to-top/to-top.html
@@ -2,7 +2,7 @@
 
 Нужно убрать пробел между @-ами:
 
-@ @include('blocks/to-top/to-top.html')
+@@include('to-top.js')
 
 -->
 <a href="#" class="to-top" id="toTop">↑</a>
