--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <ul class="menu__list">
       <li class="menu__item">Информация</li>
       <li class="menu__item">Фото и видео</li>
-      <li class="menu__item"><div class="logo" aria-label="logo" role="image"></div></li>
+      <li class="menu__item"><div class="logo" aria-label="logo" role=img></div></li>
       <li class="menu__item">Карта штата</li>
       <li class="menu__item">Гостиницы</li>
     </ul>
@@ -38,7 +38,7 @@
         </div>
 
         <div class="media__object">
-          <div class="main__image  main__image--sedona-streets" role="image" aria-label="Улицы Седоны"></div>
+          <div class="main__image  main__image--sedona-streets" role=img aria-label="Улицы Седоны"></div>
         </div>
 
       </div>
@@ -47,7 +47,7 @@
     <div class="row  offers">
       <div class="media  media--vertical">
         <div class="media__object">
-          <div class="icon  icon__accomodations" role="image" aria-label="Жилье - иконка"></div>
+          <div class="icon  icon__accomodations" role=img aria-label="Жилье - иконка"></div>
         </div>
 
         <div class="media__body">
@@ -58,7 +58,7 @@
 
       <div class="media  media--vertical">
         <div class="media__object">
-          <div class="icon  icon__food" role="image" aria-label="Еда - иконка"></div>
+          <div class="icon  icon__food" role=img aria-label="Еда - иконка"></div>
         </div>
 
         <div class="media__body">
@@ -69,7 +69,7 @@
 
       <div class="media  media--vertical">
         <div class="media__object">
-          <div class="icon  icon__presents" role="image" aria-label="Сувениры - иконка"></div>
+          <div class="icon  icon__presents" role=img aria-label="Сувениры - иконка"></div>
         </div>
 
         <div class="media__body">
@@ -85,7 +85,7 @@
       <div class="media  media--direction">
 
         <div class="media__object">
-          <div class="main__image  main__image--diablo-bridge" role="image" aria-label="Мост дьявола"></div>
+          <div class="main__image  main__image--diablo-bridge" role=img aria-label="Мост дьявола"></div>
         </div>
 
         <div class="media__body  media__body--color-blue">
@@ -141,7 +141,7 @@
           <input class="search-form__input  search-form__input--size-l  search-form__input--size-sm" type="number" id="adults_number" name="adults_number" />
 
           <label class="search-form__label  search-form__label--size-m  search-form__label--size-sm" for="children_number">Дети:</label>
-          <input class="search-form__input  search-form__input--size-l  search-form__input--size-sm" type="number" id="adults_number" name="adults_number" />
+          <input class="search-form__input  search-form__input--size-l  search-form__input--size-sm" type="number" id="children_number" name="children_number" />
           <button class="btn search-form__submit">Найти</button>
         </form>
       </div>
@@ -150,18 +150,13 @@
   <footer class="footer">
     <div class="footer__col  social__instagram">#VISITSEDONA</div>
     <div class="footer__col">
-      <div class="btn  social  social__twitter"  role="image" aria-label="twitter-button"></div>
-      <div class="btn  social  social__facebook" role="image" aria-label="facebook-button"></div>
-      <div class="btn  social  social__youtube"  role="image" aria-label="youtube-button"></div>
+      <div class="btn  social  social__twitter"  role=img aria-label="twitter-button"></div>
+      <div class="btn  social  social__facebook" role=img aria-label="facebook-button"></div>
+      <div class="btn  social  social__youtube"  role=img aria-label="youtube-button"></div>
     </div>
     <div class="footer__col  footer__copyright">Made by</div>
   </footer>
+  @@include('blocks/to-top/to-top.html')
   <script type="text/javascript" src="js/script.min.js"></script>
-  <script>
-    $( document ).ready(function() {
-      $(".footer__copyright").text("Created with JS");
-      $(".is-datepick").datepick();
-    });
-  </script>
 </body>
 </html>
