Add the sprite with svg for a masthead

--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,18 @@
   <header class="masthead">
     <h1 class="visually-hidden">Welcome to the gorgeous Sedona</h1>
     <span class="visually-hidden">Because the Grand Canyon sucks!</span>
+      <svg class="masthead__title--welcome">
+        <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/sprite-svg.svg#text-welcome"></use>
+      </svg>
+      <svg class="masthead__title--gorgeous">
+        <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/sprite-svg.svg#text-tothegorgeous"></use>
+      </svg>
+      <svg class="masthead__title--sedona">
+        <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/sprite-svg.svg#text-sedona"></use>
+      </svg>
+      <svg class="masthead__title--canyon">
+        <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/sprite-svg.svg#text-becausecanyon"></use>
+      </svg>
   </header>
 
   <section class="main">
